--- a/src/main/resources/c3p0.properties
+++ b/src/main/resources/c3p0.properties
@@ -1,7 +1,8 @@
 #驱动
 c3p0.driverClass=com.mysql.jdbc.Driver
 #URL
-c3p0.jdbcUrl=jdbc\:mysql\://192.168.3.232\:3306/envdata
+#c3p0.jdbcUrl=jdbc\:mysql\://192.168.3.232\:3306/envdata
+c3p0.jdbcUrl=jdbc\:mysql\://localhost\:3306/envdata
 #用户名
 c3p0.user=root
 #密码
